--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,10 @@
     <title>Kopana</title>
   </head>
   <body>
-    <script src="iziToast.min.js" type="text/javascript"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    
+    <!-- <script src="iziToast.min.js" type="text/javascript"></script> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
